--- a/Practica2/WebGUI/prac2.Master
+++ b/Practica2/WebGUI/prac2.Master
@@ -15,6 +15,9 @@
     <div>
         <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
         
+            <p id="menu">
+                menu placeholder</p>
+        
         </asp:ContentPlaceHolder>
     </div>
     </form>
